@@ -1,9 +1,11 @@
 Build.PL
 Changes
+check_max.c
 lib/Time/y2038.pm
 lib/Time/y2038.xs
 lib/Time/y2038/Everywhere.pm
 MANIFEST			This list of files
+MANIFEST.SKIP
 META.yml
 munge_config
 t/everywhere.t
