@@ -14,25 +14,27 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 10f0775785ab7b9e2d083482baaa49300b477a7d Build.PL
-SHA1 13499fbb2870e1d0825e5beca0e207e185b4d825 Changes
-SHA1 18852988327845bcf65470ba5f4d79ae6bb18fc1 MANIFEST
-SHA1 d841a9e7ab34d66c376919ca34775395fabfdb69 META.yml
-SHA1 dce5ad497523a7d37f97f7b15e7786a965b947cf lib/Time/y2038.pm
-SHA1 73fe44644bb5f544eb4a508a4359f4e408da327d lib/Time/y2038.xs
-SHA1 c5765f7f06817f9211daf78088389075c89caa07 lib/Time/y2038/Everywhere.pm
-SHA1 a5cff4fb987cff698bf2523ce2fb68178dd5f1b4 munge_config
+SHA1 97e6ce2e6e300a9b6bb44649ec406399db71c640 Build.PL
+SHA1 9df453706e7b76be91235ee7d8de741f25000962 Changes
+SHA1 2cc0ff20efb30ac1bc5cdce89c0d98d62edeff8d MANIFEST
+SHA1 9698a8c937c13d598301a07120b1472d163390f6 MANIFEST.SKIP
+SHA1 1e1f5445dd3be58fd9037a42bdddbd113d4a30fd META.yml
+SHA1 ca5d1482553dcd33da82db3299e58bd65329a38a check_max.c
+SHA1 d5d76dfcf8988e7bffdf01465a5ba7c7b7a16804 lib/Time/y2038.pm
+SHA1 666e25e498a3bd6bdb9bcab3f9e5b8812e4567f3 lib/Time/y2038.xs
+SHA1 cbc8d0e2881aaa773a5306ab3fa4124c0d9463e5 lib/Time/y2038/Everywhere.pm
+SHA1 86c1c0b6f58666b6ac2247312cf459b903b75dd5 munge_config
 SHA1 2997ee7e8bed8f51793ff239c094bd1838d12e06 t/everywhere.t
 SHA1 a9dd5089dd4bfae40c9cfa72d2bcb7be7f46591a t/time.t
-SHA1 cbe5b6fb6257e9d59307b5f4252a05796bec7f63 t/timegm.t
+SHA1 0f7a96de5a04d9326e963cb480a50ebf783c5b2c t/timegm.t
 SHA1 a915486e0da8713dead77ca21d041c8ae6b6676e typemap
-SHA1 539266841d3a21e4d584ab18ff638a0eb3738bac y2038/time64.c
+SHA1 96834fb722bb467065888454275a21c36fb7c1b3 y2038/time64.c
 SHA1 c0dfb7f4e4dca8eaa3a28bbe0b680ebd36eaf722 y2038/time64.h
-SHA1 d69a9708be75fd536106d723d171326dc4fd44ec y2038/time64_config.h.in
+SHA1 7761df7832a8e3df7976d9a278d684ea37b2bdc1 y2038/time64_config.h.in
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Darwin)
 
-iEYEARECAAYFAkj8MmUACgkQWMohlhD1QydxoQCgqlIPvJtteT9blmkoUJGvmfFp
-JvAAn2Mo3iR6C04fXoI/bDOMkTfNBQKI
-=xg6l
+iEYEARECAAYFAkkTsFcACgkQWMohlhD1QycUOACfYzCNBIYxa5xIdD2t6V4tvZeP
+mrEAnA00IH2NCgkxmQCU58cK6ITh1pWE
+=2Cf0
 -----END PGP SIGNATURE-----
