@@ -1,2 +1,14 @@
+20081106  Thu Nov  6 19:01:22 PST 2008
+  Portability Improvements
+  * Test the system time.h's limits and use them rather than the safe
+    1970-2038 range.
+
+  Test Fixes
+  * Compare times using numeric equality instead of string equality to avoid
+    Perl messing up on big numbers.
+  * timelocal() can now take an $isdst argument to disambiguate certain
+    dates which can occur twice (like daylight savings time fall back)
+
+
 20081020  Mon Oct 20 00:10:51 PDT 2008
   First release
